cicd/argo-cd/bluegreen/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-rollout # 定义Rollout的名称
spec:
  replicas: 2 # 期望副本数
  strategy:
    blueGreen: # 指定蓝绿部署策略
      activeService: bluegreen-active # 用于接收生产流量的Service
      previewService: bluegreen-preview # 用于接收预览流量的Service
      autoPromotionEnabled: false # 是否自动提升预览版本为活动版本
      previewReplicaCount: 1 # 预览版本的副本数
  revisionHistoryLimit: 2 # 保留的历史版本
  selector: # 类似deployment的selector
    matchLabels:
      app: demo
  template: # 类似deployment的template
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: harbor.local.com/devops/spring_boot_demo:master-7a5b421e
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
