cicd/argo-cd/bluegreen/ingress.yaml
# 生产环境service对应的ingress
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-prod
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo.prod.com`) # 生产环境域名
      kind: Rule
      services:
        - name: bluegreen-active  # 与svc的name一致
          port: 8888 # 与svc的port一致
---
# 预览环境service对应的ingress
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo.test.com`) # 测试环境域名
      kind: Rule
      services:
        - name: bluegreen-preview # 与svc的name一致
          port: 8888 # 与svc的port一致
